--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.51.0",
+    "lucide-react": "^0.525.0",
     "next": "^15.3.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
