--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -117,9 +117,9 @@ file_size_limit = "50MiB"
 enabled = true
 # The base URL of your website. Used as an allow-list for redirects and for constructing URLs used
 # in emails.
-site_url = "http://127.0.0.1:3001"
+site_url = "https://www.mundopadelclub.com"
 # A list of *exact* URLs that auth providers are permitted to redirect to post authentication.
-additional_redirect_urls = ["http://127.0.0.1:3001", "http://127.0.0.1:3001/reset-password", "https://127.0.0.1:3001", "https://127.0.0.1:3001/reset-password"]
+additional_redirect_urls = ["https://www.mundopadelclub.com", "https://www.mundopadelclub.com/reset-password", "http://127.0.0.1:3001", "http://127.0.0.1:3001/reset-password", "https://127.0.0.1:3001", "https://127.0.0.1:3001/reset-password"]
 # How long tokens are valid for, in seconds. Defaults to 3600 (1 hour), maximum 604,800 (1 week).
 jwt_expiry = 3600
 # If disabled, the refresh token will never expire.
