Implement weekly recurring bookings propagation system
- Add weekly propagation endpoint that runs Mondays at 00:00 Buenos Aires
- Propagate only 2 weeks ahead instead of 15 days for efficiency
- Add duplicate checking before creating new bookings to prevent conflicts
- Separate concerns: auto-process marks completed bookings, weekly-propagation creates new ones
- Ensure booking overlap for continuous availability (21 days coverage)
- Verify date ranges and existing bookings before creation
- Optimize cron schedule to run only on Mondays (0 3 * * 1)
- Fix linting errors and ensure TypeScript compilation success

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "crons": [
     {
-      "path": "/api/bookings/auto-process",
-      "schedule": "*/30 * * * *"
+      "path": "/api/bookings/weekly-propagation",
+      "schedule": "0 3 * * 1"
     }
   ]
 }
