--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@supabase/supabase-js": "^2.51.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "next": "^15.3.5",
+    "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
